Made the header image smaller; Brought Lines in the footer closer together; fixed spacing in the header and sizing on the home page; Added link to designers page to the footer

--- a/static/css/largeScreen.css
+++ b/static/css/largeScreen.css
@@ -22,7 +22,7 @@ nav {
         li {
             display: inline-block;
             list-style: none;
-            margin: 10px 30px;
+            margin: 10px 50px 0 50px;
 
             a {
                 text-decoration: none;
@@ -45,7 +45,8 @@ nav {
     align-items: center;
     text-align: center;
     font-size: 12px;
-    line-height: .25;
+    line-height: 0;
+    margin-bottom: 50px;
 
     img {
         margin: 60px 0 50px 0;
@@ -57,8 +58,9 @@ nav {
 /* ====================================== HOMEPAGE STYLING ====================================== */
 
 .heli-logo {
-    height: 125px;
-    width: 125px;
+    height: 115px;
+    width: 115px;
+    margin: 20px 0 20px 0;
 }
 
 #homepage-main {
@@ -151,6 +153,12 @@ nav {
     color: #04915F;
     font-weight: normal;
     margin-left: 5%;
+    letter-spacing: 4px;
+
+    h1{
+        font-size: 45px;
+
+    }
 }
 
 #home-title .bold {
@@ -241,7 +249,7 @@ nav {
 #undergrad-students-container {
     display: flex;
     flex-wrap: wrap;
-    column-gap:40px;
+    column-gap:30px;
     row-gap: 40px;
     margin-left: 10%;
     margin-right:5%; 
