--- a/static/css/mediumScreen.css
+++ b/static/css/mediumScreen.css
@@ -22,7 +22,7 @@ nav {
         li {
             display: inline-block;
             list-style: none;
-            margin: 10px 15px;
+            margin: 10px 27px 0 27px;
 
             a {
                 text-decoration: none;
@@ -45,7 +45,8 @@ nav {
     align-items: center;
     text-align: center;
     font-size: 12px;
-    line-height: .25;
+    line-height: 0;
+    margin-bottom: 50px;
     img {
         margin: 60px 0 50px 0;
         width: 110px;
@@ -277,8 +278,9 @@ nav {
 /* ====================================== HOMEPAGE STYLING ====================================== */
 
 .heli-logo {
-    height: 125px;
-    width: 125px;
+    height: 90px;
+    width: 90px;
+    margin: 20px 0 20px 0;
 }
 
 #homepage-main {
@@ -371,8 +373,10 @@ nav {
     color: #04915F;
     font-weight: normal;
     margin-left: 5%;
+    letter-spacing: 4px;
+
     h1{
-        font-size: 28px;
+        font-size: 22px;
     }
 
 }
@@ -594,6 +598,7 @@ h3.person-name {
         height: auto;
         width: 26px;
     }
+}
 /* ====================================== PROSPECTS STYLING (Mitchell) ====================================== */
 
 .prospects-main {
